test/fail/integration/_fail_sem_expr_mod_2.hs
x :: Int
x = mod 4 "hello"
main = print "hello"